# spotify-connect

./: .gitignore  CMakeLists.txt  README.md  spotify-connect.c  spotify-connect.sh
creds/: creds.sh
include/: creds.h
include/creds/: creds.h
src/: spotify-connect.c
